# TurboIndex

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: test_basic.py
turboindex/: __init__.py  cli.py  config.py  connection.py  index_recommender.py  profiler.py  reporting.py  rewriter.py
